<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FilePicker">

    <item android:id="@+id/group_order_by"
        android:title="@string/menu_order_by"
        android:icon="@drawable/ic_arrow_up_white_24dp"
        android:orderInCategory="200"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_order_by_name_asc"
                android:title="@string/menu_order_by_name"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_name_desc"
                android:title="@string/menu_order_by_name"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
            <item
                android:id="@+id/action_order_by_mimetype_asc"
                android:title="@string/menu_order_by_mimetype"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_mimetype_desc"
                android:title="@string/menu_order_by_mimetype"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
            <item
                android:id="@+id/action_order_by_size_asc"
                android:title="@string/menu_order_by_size"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_size_desc"
                android:title="@string/menu_order_by_size"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
        </menu>
    </item>
</menu>