<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/ok_button"
            android:text="@string/ok_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/buttons_layout"
        android:paddingBottom="16dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/folders_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/progressBar">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/parent_path_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <Button
                        android:id="@+id/current_folder_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/primary_text_light"
                        android:text="@string/placeholder_text"/>

                </LinearLayout>
            </HorizontalScrollView>

        </RelativeLayout>

        <ListView
            android:id="@+id/files_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>